--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,13 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -39,12 +46,23 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    }
+
+
+
+
+    )
+
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile project(':jokeslib')
     compile project(':showjoke')
     compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.google.android.gms:play-services-ads:10.0.1'
+    freeCompile 'com.google.android.gms:play-services-ads:10.0.1'
     compile 'com.google.code.findbugs:jsr305:2.0.1'
     compile 'com.android.support:support-v4:25.1.1'
+    testCompile 'junit:junit:4.12'
+
+
 }
+
+
